# uni-admission-crawler

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: daily.yml
config/: config.yaml
config/prompts/: classifier.txt
data/: state.db
docs/: 00-方案总览.md  01-费用说明.md  02-需求规格说明书.md  03-测试规格说明书.md  04-方案B-RSSHub聚合.md  05-工程实现清单.md  06-源审计原始数据.json  06-源审计报告.md  07-方案B升级路线.md  08-Wave4处理规则.md  README.md
docs/sources/: bit.md  bnu.md  buaa.md  cau.md  cqu.md  csu.md  dut.md  ecnu.md  hit.md  hnu.md  hust.md  jlu.md  nju.md  nudt.md  nwafu.md  pku.md  ruc.md  seu.md  sjtu.md  sysu.md  tju.md  tongji.md  tsinghua.md  ustc.md  whu.md  xjtu.md  xmu.md  zju.md  东北大学.md  中国海洋大学.md  中央民族大学.md  兰州大学.md  华南理工大学.md  南开大学.md  四川大学.md  复旦大学.md  山东大学.md  电子科技大学.md  西北工业大学.md
scripts/: .gitignore  audit_sources.py
src/crawler/: __init__.py  config.py  logging_setup.py  main.py  schema.py
src/crawler/fetchers/: __init__.py  base.py  dlut_admissions.py  fudan_ao.py  fudan_gsao.py  rsshub.py  (+8 more)
templates/: daily_report.md.j2
tests/: classification_history.csv  conftest.py
tests/e2e/: test_encoding_chain.py  test_main.py
tests/fixtures/: classification_gold.jsonl  fudan_ao_list_v1.html  fudan_ao_list_v2.html  sjtu_admissions_news.json  sjtu_jwc.xml  sjtu_yzb.xml  tsinghua_news.xml  tsinghua_zsb_zygg.html
tests/integration/: test_pipeline.py
tests/unit/: test_classifier.py  test_classifier_gold.py  test_dedup.py  test_fetchers.py  test_pushers.py  test_render.py  test_static_variants.py  test_webplus_variants.py
(+12 files in other folders)
